--- a/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorQuad2.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorQuad2.ipynb
@@ -179,146 +179,6 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 200
-    },
-    "colab_type": "code",
-    "executionInfo": {
-     "elapsed": 2011,
-     "status": "ok",
-     "timestamp": 1594010840395,
-     "user": {
-      "displayName": "ChangWook Jun",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GjljUh9LMLCM8kMgWLaX2xHiw2Cej8KoaOlkKxE=s64",
-      "userId": "00685987924881157185"
-     },
-     "user_tz": -540
-    },
-    "id": "v3iSyVdfcuaM",
-    "outputId": "6a8729fd-f199-4839-b917-8c71ce944880"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2020-08-16 23:29:51--  https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-cased-config.json\n",
-      "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.216.113.245\n",
-      "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.216.113.245|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 625 [application/json]\n",
-      "Saving to: ‘./bert-base-multilingual-cased/bert-base-multilingual-cased-config.json’\n",
-      "\n",
-      "bert-base-multiling 100%[===================>]     625  --.-KB/s    in 0s      \n",
-      "\n",
-      "2020-08-16 23:29:51 (18.7 MB/s) - ‘./bert-base-multilingual-cased/bert-base-multilingual-cased-config.json’ saved [625/625]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!wget -P ./bert-base-multilingual-cased/ https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-cased-config.json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "executionInfo": {
-     "elapsed": 1700,
-     "status": "ok",
-     "timestamp": 1594010866573,
-     "user": {
-      "displayName": "ChangWook Jun",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GjljUh9LMLCM8kMgWLaX2xHiw2Cej8KoaOlkKxE=s64",
-      "userId": "00685987924881157185"
-     },
-     "user_tz": -540
-    },
-    "id": "olsOtichcvHG"
-   },
-   "outputs": [],
-   "source": [
-    "!mv ./bert-base-multilingual-cased/bert-base-multilingual-cased-config.json ./bert-base-multilingual-cased/config.json "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 200
-    },
-    "colab_type": "code",
-    "executionInfo": {
-     "elapsed": 23066,
-     "status": "ok",
-     "timestamp": 1594010913658,
-     "user": {
-      "displayName": "ChangWook Jun",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GjljUh9LMLCM8kMgWLaX2xHiw2Cej8KoaOlkKxE=s64",
-      "userId": "00685987924881157185"
-     },
-     "user_tz": -540
-    },
-    "id": "0UCpszHHc5uN",
-    "outputId": "b976efed-cd09-45ce-9a17-357f73dba450"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2020-08-16 23:29:51--  https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-cased-tf_model.h5\n",
-      "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.216.113.245\n",
-      "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.216.113.245|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 1083389348 (1.0G) [binary/octet-stream]\n",
-      "Saving to: ‘./bert-base-multilingual-cased/bert-base-multilingual-cased-tf_model.h5’\n",
-      "\n",
-      "bert-base-multiling 100%[===================>]   1.01G  86.5MB/s    in 11s     \n",
-      "\n",
-      "2020-08-16 23:30:03 (90.5 MB/s) - ‘./bert-base-multilingual-cased/bert-base-multilingual-cased-tf_model.h5’ saved [1083389348/1083389348]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!wget -P ./bert-base-multilingual-cased/ https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-cased-tf_model.h5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "executionInfo": {
-     "elapsed": 14933,
-     "status": "ok",
-     "timestamp": 1594010914796,
-     "user": {
-      "displayName": "ChangWook Jun",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GjljUh9LMLCM8kMgWLaX2xHiw2Cej8KoaOlkKxE=s64",
-      "userId": "00685987924881157185"
-     },
-     "user_tz": -540
-    },
-    "id": "UFOJPxyic5yG"
-   },
-   "outputs": [],
-   "source": [
-    "!mv ./bert-base-multilingual-cased/bert-base-multilingual-cased-tf_model.h5 ./bert-base-multilingual-cased/tf_model.h5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
      "height": 50
     },
     "colab_type": "code",
@@ -348,12 +208,11 @@
    ],
    "source": [
     "class SquadExample:\n",
-    "    def __init__(self, question, context, start_char_idx, answer_text, all_answers):\n",
+    "    def __init__(self, question, context, start_char_idx, answer_text):\n",
     "        self.question = question\n",
     "        self.context = context\n",
     "        self.start_char_idx = start_char_idx\n",
     "        self.answer_text = answer_text\n",
-    "        self.all_answers = all_answers\n",
     "        self.skip = False\n",
     "\n",
     "    def preprocess(self):\n",
@@ -380,7 +239,7 @@
     "\n",
     "        # Tokenize context\n",
     "        tokenized_context = tokenizer.encode(context)\n",
-    "        #print(tokenized_context)\n",
+    "\n",
     "        # Find tokens that were created from answer characters\n",
     "        ans_token_idx = []\n",
     "        for idx, (start, end) in enumerate(tokenized_context.offsets):\n",
@@ -439,10 +298,9 @@
     "            for qa in para[\"qas\"]:\n",
     "                question = qa[\"question\"]\n",
     "                answer_text = qa[\"answers\"][0][\"text\"]\n",
-    "                all_answers = [_[\"text\"] for _ in qa[\"answers\"]]\n",
     "                start_char_idx = qa[\"answers\"][0][\"answer_start\"]\n",
     "                squad_eg = SquadExample(\n",
-    "                    question, context, start_char_idx, answer_text, all_answers\n",
+    "                    question, context, start_char_idx, answer_text\n",
     "                )\n",
     "                squad_eg.preprocess()\n",
     "                squad_examples.append(squad_eg)\n",
@@ -484,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -506,7 +364,7 @@
     "class TFBERTKorquad(tf.keras.Model):\n",
     "    def __init__(self, max_len=None):\n",
     "        super(TFBERTKorquad, self).__init__()\n",
-    "        self.encoder = TFBertModel.from_pretrained('./bert-base-multilingual-cased/')\n",
+    "        self.encoder = TFBertModel.from_pretrained(\"bert-base-multilingual-cased\")\n",
     "        self.start_logit = tf.keras.layers.Dense(1, name=\"start_logit\", use_bias=False)\n",
     "        self.end_logit = tf.keras.layers.Dense(1, name=\"end_logit\", use_bias=False)\n",
     "        self.flatten = tf.keras.layers.Flatten() \n",
@@ -517,7 +375,7 @@
     "        embedding = self.encoder(input_ids, token_type_ids=token_type_ids, attention_mask=attention_mask)[0]\n",
     "        start_logits = self.start_logit(embedding)\n",
     "        start_logits = self.flatten(start_logits)\n",
-    "\n",
+    "        \n",
     "        end_logits = self.end_logit(embedding)\n",
     "        end_logits = self.flatten(end_logits)\n",
     "        \n",
@@ -529,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -555,10 +413,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at ./bert-base-multilingual-cased/ were not used when initializing TFBertModel: ['nsp___cls', 'mlm___cls']\n",
+      "Some weights of the model checkpoint at bert-base-multilingual-cased were not used when initializing TFBertModel: ['nsp___cls', 'mlm___cls']\n",
       "- This IS expected if you are initializing TFBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPretraining model).\n",
       "- This IS NOT expected if you are initializing TFBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "All the weights of TFBertModel were initialized from the model checkpoint at ./bert-base-multilingual-cased/.\n",
+      "All the weights of TFBertModel were initialized from the model checkpoint at bert-base-multilingual-cased.\n",
       "If your task is similar to the task the model of the ckeckpoint was trained on, you can already use TFBertModel for predictions without further training.\n"
      ]
     }
@@ -571,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -622,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -665,7 +523,7 @@
     "                pred_ans = squad_eg.context[pred_char_start:]\n",
     "\n",
     "            normalized_pred_ans = normalize_answer(pred_ans)\n",
-    "            normalized_true_ans = [normalize_answer(_) for _ in squad_eg.all_answers]\n",
+    "            normalized_true_ans = normalize_answer(squad_eg.answer_text)\n",
     "            if normalized_pred_ans in normalized_true_ans:\n",
     "                count += 1\n",
     "        acc = count / len(self.y_eval[0])\n",
@@ -674,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -698,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -722,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -802,7 +660,12 @@
       "WARNING:tensorflow:Gradients do not exist for variables ['tf_bert_model/bert/pooler/dense/kernel:0', 'tf_bert_model/bert/pooler/dense/bias:0'] when minimizing the loss.\n",
       "WARNING:tensorflow:Gradients do not exist for variables ['tf_bert_model/bert/pooler/dense/kernel:0', 'tf_bert_model/bert/pooler/dense/bias:0'] when minimizing the loss.\n",
       "WARNING:tensorflow:Gradients do not exist for variables ['tf_bert_model/bert/pooler/dense/kernel:0', 'tf_bert_model/bert/pooler/dense/bias:0'] when minimizing the loss.\n",
-      "WARNING:tensorflow:Gradients do not exist for variables ['tf_bert_model/bert/pooler/dense/kernel:0', 'tf_bert_model/bert/pooler/dense/bias:0'] when minimizing the loss.\n"
+      "WARNING:tensorflow:Gradients do not exist for variables ['tf_bert_model/bert/pooler/dense/kernel:0', 'tf_bert_model/bert/pooler/dense/bias:0'] when minimizing the loss.\n",
+      "\n",
+      "epoch=1, exact match score=0.71\n",
+      "WARNING:tensorflow:Can save best model only with val_loss available, skipping.\n",
+      "2941/2941 - 1378s - loss: 1.6006 - output_1_loss: 0.7361 - output_2_loss: 0.8645\n",
+      "Epoch 2/3\n"
      ]
     }
    ],
@@ -812,7 +675,7 @@
     "    y_train,\n",
     "    epochs=3,  # For demonstration, 3 epochs are recommended\n",
     "    verbose=2,\n",
-    "    batch_size=16, #2->64\n",
+    "    batch_size=16,\n",
     "    callbacks=[exact_match_callback, cp_callback]\n",
     ")"
    ]
@@ -838,13 +701,6 @@
    "source": [
     "plot_graphs(history, 'loss', 'output_1_loss', 'output_2_loss')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
