--- a/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorNLI.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorNLI.ipynb
@@ -260,7 +260,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -288,86 +290,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0629 15:57:03.610844 140140896171840 configuration_utils.py:254] loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-uncased-config.json from cache at bert_ckpt/33b56ce0f312e47e4d77a57791a4fc6233ae4a560dd2bdd186107058294e58ab.fcb1786f49c279f0e0f158c9972b9bd9f6c0edb5d893dcb9b530d714d86f0edc\n",
-      "I0629 15:57:03.612658 140140896171840 configuration_utils.py:290] Model config BertConfig {\n",
-      "  \"architectures\": [\n",
-      "    \"BertForMaskedLM\"\n",
-      "  ],\n",
-      "  \"attention_probs_dropout_prob\": 0.1,\n",
-      "  \"bos_token_id\": 0,\n",
-      "  \"directionality\": \"bidi\",\n",
-      "  \"do_sample\": false,\n",
-      "  \"eos_token_ids\": 0,\n",
-      "  \"finetuning_task\": null,\n",
-      "  \"hidden_act\": \"gelu\",\n",
-      "  \"hidden_dropout_prob\": 0.1,\n",
-      "  \"hidden_size\": 768,\n",
-      "  \"id2label\": {\n",
-      "    \"0\": \"LABEL_0\",\n",
-      "    \"1\": \"LABEL_1\"\n",
-      "  },\n",
-      "  \"initializer_range\": 0.02,\n",
-      "  \"intermediate_size\": 3072,\n",
-      "  \"is_decoder\": false,\n",
-      "  \"label2id\": {\n",
-      "    \"LABEL_0\": 0,\n",
-      "    \"LABEL_1\": 1\n",
-      "  },\n",
-      "  \"layer_norm_eps\": 1e-12,\n",
-      "  \"length_penalty\": 1.0,\n",
-      "  \"max_length\": 20,\n",
-      "  \"max_position_embeddings\": 512,\n",
-      "  \"model_type\": \"bert\",\n",
-      "  \"num_attention_heads\": 12,\n",
-      "  \"num_beams\": 1,\n",
-      "  \"num_hidden_layers\": 12,\n",
-      "  \"num_labels\": 2,\n",
-      "  \"num_return_sequences\": 1,\n",
-      "  \"output_attentions\": false,\n",
-      "  \"output_hidden_states\": false,\n",
-      "  \"output_past\": true,\n",
-      "  \"pad_token_id\": 0,\n",
-      "  \"pooler_fc_size\": 768,\n",
-      "  \"pooler_num_attention_heads\": 12,\n",
-      "  \"pooler_num_fc_layers\": 3,\n",
-      "  \"pooler_size_per_head\": 128,\n",
-      "  \"pooler_type\": \"first_token_transform\",\n",
-      "  \"pruned_heads\": {},\n",
-      "  \"repetition_penalty\": 1.0,\n",
-      "  \"temperature\": 1.0,\n",
-      "  \"top_k\": 50,\n",
-      "  \"top_p\": 1.0,\n",
-      "  \"torchscript\": false,\n",
-      "  \"type_vocab_size\": 2,\n",
-      "  \"use_bfloat16\": false,\n",
-      "  \"vocab_size\": 105879\n",
-      "}\n",
-      "\n",
-      "I0629 15:57:04.598814 140140896171840 modeling_tf_utils.py:338] loading weights file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-uncased-tf_model.h5 from cache at bert_ckpt/7efc9507bca9e880aea7a38a849d8e16fcd54f2071f8f8143afa5815d00a16f4.25728a4fd7ddaafee2965f5821a206f237b83c672e0bb092881f9b1f5eea2b2f.h5\n",
-      "I0629 15:57:07.654502 140140896171840 modeling_tf_utils.py:376] Layers of TFBertClassifier not initialized from pretrained model: ['classifier', 'dropout_151']\n",
-      "I0629 15:57:07.655567 140140896171840 modeling_tf_utils.py:380] Layers from pretrained model not used in TFBertClassifier: ['nsp___cls', 'mlm___cls']\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "class TFBertClassifier(TFBertPreTrainedModel):\n",
-    "    def __init__(self, config):\n",
-    "        super().__init__(config)\n",
-    "        \n",
-    "        self.num_labels = 3        \n",
-    "        self.bert = TFBertMainLayer(config, name=\"bert\")\n",
-    "        self.dropout = tf.keras.layers.Dropout(config.hidden_dropout_prob)\n",
-    "        self.classifier = tf.keras.layers.Dense(config.num_labels, \n",
-    "                                                kernel_initializer=tf.keras.initializers.TruncatedNormal(config.initializer_range), \n",
+    "class TFBertClassifier(tf.keras.Model):\n",
+    "    def __init__(self, model_name, dir_path, num_class):\n",
+    "        super(TFBertClassifier, self).__init__()\n",
+    "\n",
+    "        self.bert = TFBertModel.from_pretrained(model_name, cache_dir=dir_path)\n",
+    "        self.dropout = tf.keras.layers.Dropout(self.bert.config.hidden_dropout_prob)\n",
+    "        self.classifier = tf.keras.layers.Dense(num_class, \n",
+    "                                                kernel_initializer=tf.keras.initializers.TruncatedNormal(self.bert.config.initializer_range), \n",
     "                                                name=\"classifier\")\n",
     "        \n",
     "    def call(self, inputs, attention_mask=None, token_type_ids=None, training=False):\n",
@@ -380,9 +314,9 @@
     "\n",
     "        return logits\n",
     "\n",
-    "bert_config = BertConfig() # 기본 버트 파라메터\n",
-    "cls_model = TFBertClassifier(bert_config).from_pretrained(\"bert-base-multilingual-uncased\", cache_dir='bert_ckpt')\n",
-    "# cls_model = TFBertClassifier(bert_config).from_pretrained(\"bert-base-multilingual-cased\", cache_dir='bert_ckpt')"
+    "cls_model = TFBertClassifier(model_name='bert-base-multilingual-cased',\n",
+    "                                  dir_path='bert_ckpt',\n",
+    "                                  num_class=3)"
    ]
   },
   {
@@ -623,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
