--- a/7.PRETRAIN_METHOD/7.2_bert_finetune-KOR-KORNER.ipynb
+++ b/7.PRETRAIN_METHOD/7.2_bert_finetune-KOR-KORNER.ipynb
@@ -206,10 +206,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 테스트용\n",
+    "ner_begin_label = [ner_labels.index(begin_label) for begin_label in ner_labels if \"B\" in begin_label]\n",
+    "ner_begin_label_string = [ner_labels[label_index] for label_index in ner_begin_label]\n",
+    "\n",
+    "print(ner_begin_label)\n",
+    "print(ner_begin_label_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "ner_begin_label = [ner_labels.index(begin_label) for begin_label in ner_labels if \"B\" in begin_label]\n",
+    "\n",
     "def create_inputs_targets(df):\n",
     "    input_ids = []\n",
     "    attention_masks = []\n",
@@ -225,7 +241,6 @@
     "        for label in labels:\n",
     "            labels_idx.append(ner_labels.index(label) if label in ner_labels else ner_labels.index(\"UNK\"))\n",
     "\n",
-    "        ner_begin_label = [ner_labels.index(begin_label) for begin_label in ner_labels if \"B\" in begin_label]\n",
     "        assert len(words) == len(labels_idx)\n",
     "\n",
     "        input_id, attention_mask, token_type_id = bert_tokenizer(sentence, MAX_LEN)\n",
@@ -306,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,9 +331,8 @@
     "    )\n",
     "\n",
     "    # 0의 레이블 값은 손실 값을 계산할 때 제외\n",
-    "    \n",
     "    active_loss = tf.reshape(labels, (-1,)) != 0\n",
-    "    \n",
+    "        \n",
     "    reduced_logits = tf.boolean_mask(tf.reshape(logits, (-1, shape_list(logits)[2])), active_loss)\n",
     "        \n",
     "    labels = tf.boolean_mask(tf.reshape(labels, (-1,)), active_loss)\n",
@@ -328,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,13 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Prepare training: Compile tf.keras model with optimizer, loss and learning rate schedule\n",
     "optimizer = tf.keras.optimizers.Adam(3e-5)\n",
-    "ner_model.compile(optimizer=optimizer, loss=compute_loss, run_eagerly=True)"
+    "# ner_model.compile(optimizer=optimizer, loss=compute_loss, run_eagerly=True)\n",
+    "ner_model.compile(optimizer=optimizer, loss=compute_loss)"
    ]
   },
   {
@@ -440,29 +455,6 @@
    "source": [
     "plot_graphs(history, 'loss')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://towardsdatascience.com/how-to-compute-f1-score-for-named-entity-recognition-in-keras-6f28b31dccca"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
