--- a/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorNLI.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorNLI.ipynb
@@ -30,26 +30,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "안녕 12345 이힛asdfasdf 2ㅏ34ㅓㄲ꺼져\n"
-     ]
-    }
-   ],
-   "source": [
-    "sent = \"안녕 12345 이힛asdfasdf 2ㅏ34ㅓㄲ꺼져\"\n",
-    "\n",
-    "sent_clean = re.sub(\"[^a-zA-Z0-9ㄱ-ㅣ가-힣\\\\s]\", \" \", sent)\n",
-    "print(sent_clean)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
@@ -80,7 +60,6 @@
     "\n",
     "BATCH_SIZE = 128\n",
     "NUM_EPOCHS = 3\n",
-    "VALID_SPLIT = 0.2\n",
     "MAX_LEN = 24 * 2 # Average total * 2\n",
     "\n",
     "DATA_IN_PATH = 'data_in/KOR'\n",
@@ -103,8 +82,7 @@
    "source": [
     "# 토크나이저 종류 설정\n",
     "\n",
-    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-multilingual-uncased\", cache_dir='bert_ckpt', do_lower_case=True)\n",
-    "# tokenizer = BertTokenizer.from_pretrained(\"bert-base-multilingual-cased\", cache_dir='bert_ckpt', do_lower_case=False)"
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-multilingual-cased\", cache_dir='bert_ckpt', do_lower_case=False)"
    ]
   },
   {
