rename nsmc & remove setgpu

--- a/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorNLI.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorNLI.ipynb
@@ -18,14 +18,7 @@
     "\n",
     "from tqdm import tqdm\n",
     "import numpy as np\n",
-    "import re\n",
-    "\n",
-    "try:\n",
-    "#     import setGPU\n",
-    "    os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"\n",
-    "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"6\"\n",
-    "except:\n",
-    "    print('no setGPU')"
+    "import re"
    ]
   },
   {
