--- a/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_NSMC.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_NSMC.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0630 03:27:23.629946 139756026578752 file_utils.py:38] PyTorch version 1.4.0 available.\n",
-      "I0630 03:27:23.631408 139756026578752 file_utils.py:54] TensorFlow version 2.1.0 available.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
@@ -27,14 +18,7 @@
     "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "try:\n",
-    "    os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"\n",
-    "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
-    "#     import setGPU\n",
-    "except:\n",
-    "    print('no setGPU')"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -74,21 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "I0630 03:27:25.395420 139756026578752 tokenization_utils.py:418] loading file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-uncased-vocab.txt from cache at bert_ckpt/bb773818882b0524dc53a1b31a2cc95bc489f000e7e19773ba07846011a6c711.535306b226c42cebebbc0dabc83b92ab11260e9919e21e2ab0beb301f267b4c7\n",
-      "I0630 03:27:26.443211 139756026578752 tokenization_utils.py:418] loading file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-multilingual-cased-vocab.txt from cache at bert_ckpt/96435fa287fbf7e469185f1062386e05a075cadbf6838b74da22bf64b080bc32.99bcd55fc66f4f3360bc49ba472b940b8dcf223ea6a345deb969d607ca900729\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tokenizer_uncased = BertTokenizer.from_pretrained(\"bert-base-multilingual-uncased\", cache_dir='bert_ckpt', do_lower_case=True)\n",
-    "tokenizer_cased = BertTokenizer.from_pretrained(\"bert-base-multilingual-cased\", cache_dir='bert_ckpt', do_lower_case=False)"
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-multilingual-cased\", cache_dir='bert_ckpt', do_lower_case=False)"
    ]
   },
   {
@@ -100,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,25 +82,18 @@
      "output_type": "stream",
      "text": [
       "[101, 9521, 118741, 35506, 24982, 48549, 117, 9321, 118610, 119081, 48345, 119, 102]\n",
-      "['[ C L S ]', '안', '# # 녕', '# # 하', '# # 세', '# # 요', ',', '반', '# # 갑', '# # 습', '# # 니 다', '.', '[ S E P ]']\n",
-      "[101, 1174, 26646, 49345, 13045, 35132, 25169, 47024, 117, 1170, 26646, 11376, 17360, 13212, 79427, 119, 102]\n",
-      "['[ C L S ]', 'ᄋ', '# # ᅡ ᆫ', '# # ᄂ ᅧ', '# # ᆼ', '# # ᄒ ᅡ', '# # ᄉ ᅦ', '# # ᄋ ᅭ', ',', 'ᄇ', '# # ᅡ ᆫ', '# # ᄀ ᅡ', '# # ᆸ', '# # ᄉ ᅳ', '# # ᆸ ᄂ ᅵ ᄃ ᅡ', '.', '[ S E P ]']\n"
+      "['[ C L S ]', '안', '# # 녕', '# # 하', '# # 세', '# # 요', ',', '반', '# # 갑', '# # 습', '# # 니 다', '.', '[ S E P ]']\n"
      ]
     }
    ],
    "source": [
     "test_sentence = \"안녕하세요, 반갑습니다.\"\n",
     "\n",
-    "encode_cased = tokenizer_cased.encode(test_sentence)\n",
-    "encode_uncased = tokenizer_uncased.encode(test_sentence)\n",
-    "cased_token_print = [tokenizer_cased.decode(token) for token in encode_cased]\n",
-    "uncased_token_print = [tokenizer_uncased.decode(token) for token in encode_uncased]\n",
+    "encode = tokenizer.encode(test_sentence)\n",
+    "token_print = [tokenizer.decode(token) for token in encode]\n",
     "\n",
-    "print(encode_cased)\n",
-    "print(cased_token_print)\n",
-    "\n",
-    "print(encode_uncased)\n",
-    "print(uncased_token_print)"
+    "print(encode)\n",
+    "print(token_print)"
    ]
   },
   {
@@ -138,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -213,7 +180,7 @@
        "4   6483659  사이몬페그의 익살스런 연기가 돋보였던 영화!스파이더맨에서 늙어보이기만 했던 커스틴 ...      1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,9 +190,6 @@
     "DATA_TRAIN_PATH = os.path.join(DATA_IN_PATH, \"naver_movie\", \"ratings_train.txt\")\n",
     "DATA_TEST_PATH = os.path.join(DATA_IN_PATH, \"naver_movie\", \"ratings_test.txt\")\n",
     "\n",
-    "# 토크나이저 설정\n",
-    "tokenizer = tokenizer_cased\n",
-    "\n",
     "train_data = pd.read_csv(DATA_TRAIN_PATH, header = 0, delimiter = '\\t', quoting = 3)\n",
     "train_data = train_data.dropna()\n",
     "train_data.head()"
@@ -233,19 +197,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['[SEP]', '[MASK]', '[CLS]', '[PAD]', '[UNK]'] \n",
-      " [102, 103, 101, 0, 100]\n",
-      "[101, 1174, 26646, 49345, 13045, 35132, 25169, 47024, 117, 1170, 26646, 11376, 17360, 13212, 79427, 119, 102]\n",
-      "[101, 29155, 10228, 102]\n",
-      "[CLS] 안녕하세요, 반갑습니다. [SEP]\n",
-      "[CLS] hello world [SEP]\n"
+      "['[SEP]', '[UNK]', '[MASK]', '[PAD]', '[CLS]'] \n",
+      " [102, 100, 103, 0, 101]\n",
+      "[101, 9521, 118741, 35506, 24982, 48549, 117, 9321, 118610, 119081, 48345, 119, 102]\n",
+      "[101, 31178, 11356, 102]\n",
+      "[CLS] 안녕하세요, 반갑습니다. [SEP]\n",
+      "[CLS] Hello world [SEP]\n"
      ]
     }
    ],
@@ -650,20 +614,6 @@
     "results = cls_model.evaluate(test_movie_inputs, test_data_labels, batch_size=1024)\n",
     "print(\"test loss, test acc: \", results)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
