:rocket: Code structure

--- a/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorSTS.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.bert_finetune-KOR_KorSTS.ipynb
@@ -20,12 +20,7 @@
     "\n",
     "from tqdm import tqdm\n",
     "import numpy as np\n",
-    "import re\n",
-    "\n",
-    "try:\n",
-    "    import setGPU\n",
-    "except:\n",
-    "    print('no setGPU')"
+    "import re"
    ]
   },
   {
@@ -133,10 +128,6 @@
     "\n",
     "train_data = pd.read_csv(TRAIN_STS_DF, header=0, delimiter = '\\t', quoting = 3)\n",
     "dev_data = pd.read_csv(DEV_STS_DF, header=0, delimiter = '\\t', quoting = 3)\n",
-    "\n",
-    "train_data = train_data.dropna()\n",
-    "\n",
-    "dev_data = dev_data.dropna()\n",
     "\n",
     "print(\"Total # dataset: train - {}, dev - {}\".format(len(train_data), len(dev_data)))"
    ]
@@ -360,7 +351,7 @@
     "model_name = \"tf2_BERT_KorSTS\"\n",
     "\n",
     "# overfitting을 막기 위한 ealrystop 추가\n",
-    "earlystop_callback = EarlyStopping(monitor='val_pearson_correlation', min_delta=0.0001,patience=2)\n",
+    "earlystop_callback = EarlyStopping(monitor='val_pearson_correlation', min_delta=0.0001,patience=2,mode='max')\n",
     "# min_delta: the threshold that triggers the termination (acc should at least improve 0.0001)\n",
     "# patience: no improvment epochs (patience = 1, 1번 이상 상승이 없으면 종료)\\\n",
     "\n",
@@ -375,7 +366,7 @@
     "    print(\"{} -- Folder create complete \\n\".format(checkpoint_dir))\n",
     "    \n",
     "cp_callback = ModelCheckpoint(\n",
-    "    checkpoint_path, monitor='val_pearson_correlation', verbose=1, save_best_only=True, save_weights_only=True)\n",
+    "    checkpoint_path, monitor='val_pearson_correlation', verbose=1, save_best_only=True, save_weights_only=True,mode='max')\n",
     "\n",
     "# 학습과 eval 시작\n",
     "history = regression_model.fit(train_inputs, train_data_labels, epochs=NUM_EPOCHS,\n",
@@ -421,7 +412,6 @@
     "TEST_STS_DF = os.path.join(DATA_IN_PATH, 'KorSTS', 'sts-test.tsv')\n",
     "\n",
     "test_data = pd.read_csv(TEST_STS_DF, header=0, delimiter = '\\t', quoting = 3)\n",
-    "test_data = test_data.dropna()\n",
     "test_data.head()"
    ]
   },
@@ -471,6 +461,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "regression_model.load_weights(checkpoint_path)\n",
+    "\n",
     "results = regression_model.evaluate(test_inputs, test_data_labels, batch_size=512)\n",
     "print(\"test loss, test pearson correlation: \", results)"
    ]
