--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorSTS.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorSTS.ipynb
@@ -132,9 +132,9 @@
     "    sent_clean = re.sub(\"[^가-힣ㄱ-ㅎㅏ-ㅣ\\\\s]\", \" \", sent)\n",
     "    return sent_clean\n",
     "\n",
-    "train_data_sents1 = list()\n",
-    "train_data_sents2 = list()\n",
-    "train_labels = list()\n",
+    "train_data_sents1 = []\n",
+    "train_data_sents2 = []\n",
+    "train_labels = []\n",
     "\n",
     "\n",
     "for sent1, sent2, score in train_data[['sentence1', 'sentence2', 'score']].values:\n",
@@ -179,9 +179,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev_data_sents1 = list()\n",
-    "dev_data_sents2 = list()\n",
-    "dev_labels = list()\n",
+    "dev_data_sents1 = []\n",
+    "dev_data_sents2 = []\n",
+    "dev_labels = []\n",
     "\n",
     "\n",
     "for sent1, sent2, score in dev_data[['sentence1', 'sentence2', 'score']].values:\n",
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Shape of dataset: train - {}, dev - {}\".format(train_data_sents[0].shape, dev_data_sents[0].shape))"
+    "print(\"Shape of dataset: train - ({}, {}), dev - ({}, {})\".format(train_data_sents[0].shape, train_data_sents[1].shape, dev_data_sents[0].shape, dev_data_sents[1].shape))"
    ]
   },
   {
@@ -250,7 +250,7 @@
     "        outputs1 = self.gpt2(inputs[0])\n",
     "        outputs2 = self.gpt2(inputs[1])\n",
     "        outputs = outputs1[0] + outputs2[0]\n",
-    "        pooled_output = outputs[:, -1]\n",
+    "        pooled_output = outputs[:, -1, :]\n",
     "\n",
     "        pooled_output = self.dropout(pooled_output)\n",
     "        logits = self.regressor(pooled_output)\n",
@@ -264,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim_model = TFGPT2Regressor('./gpt_ckpt', 1)"
+    "regression_model = TFGPT2Regressor('./gpt_ckpt', 1)"
    ]
   },
   {
@@ -315,7 +315,7 @@
     "optimizer = tf.keras.optimizers.Adam(6.25e-5)\n",
     "loss = tf.keras.losses.MeanSquaredError()\n",
     "metric = PearsonCorrelationMetric()\n",
-    "sim_model.compile(optimizer=optimizer, loss=loss, metrics=[metric], run_eagerly=True)"
+    "regression_model.compile(optimizer=optimizer, loss=loss, metrics=[metric], run_eagerly=True)"
    ]
   },
   {
@@ -328,7 +328,7 @@
    "source": [
     "model_name = \"tf2_gpt_korsts\"\n",
     "\n",
-    "earlystop_callback = EarlyStopping(monitor='val_pearson_correlation', min_delta=0.0001,patience=2)\n",
+    "earlystop_callback = EarlyStopping(monitor='val_pearson_correlation', min_delta=0.0001,patience=3,mode='max')\n",
     "\n",
     "checkpoint_path = os.path.join(DATA_OUT_PATH, model_name, 'weights.h5')\n",
     "checkpoint_dir = os.path.dirname(checkpoint_path)\n",
@@ -340,9 +340,9 @@
     "    print(\"{} -- Folder create complete \\n\".format(checkpoint_dir))\n",
     "    \n",
     "cp_callback = ModelCheckpoint(\n",
-    "    checkpoint_path, monitor='val_pearson_correlation', verbose=1, save_best_only=True, save_weights_only=True)\n",
+    "    checkpoint_path, monitor='val_pearson_correlation', verbose=1, save_best_only=True, save_weights_only=True,mode='max')\n",
     "\n",
-    "history = sim_model.fit(train_data_sents, train_data_labels, epochs=NUM_EPOCHS,\n",
+    "history = regression_model.fit(train_data_sents, train_data_labels, epochs=NUM_EPOCHS,\n",
     "                        validation_data = (dev_data_sents, dev_data_labels),\n",
     "            batch_size=BATCH_SIZE, callbacks=[earlystop_callback, cp_callback])"
    ]
@@ -396,9 +396,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data_sents1 = list()\n",
-    "test_data_sents2 = list()\n",
-    "test_labels = list()\n",
+    "test_data_sents1 = []\n",
+    "test_data_sents2 = []\n",
+    "test_labels = []\n",
     "\n",
     "\n",
     "for sent1, sent2, score in test_data[['sentence1', 'sentence2', 'score']].values:\n",
@@ -452,7 +452,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = sim_model.evaluate(test_data_sents, test_data_labels, batch_size=512)\n",
+    "regression_model.load_weights(checkpoint_path)\n",
+    "\n",
+    "results = regression_model.evaluate(test_data_sents, test_data_labels, batch_size=512)\n",
     "print(\"test loss, test pearson correlation: \", results)"
    ]
   },
