modified codelines for list declare notations

--- a/7.PRETRAIN_METHOD/7.2.KorQuAD_EDA.ipynb
+++ b/7.PRETRAIN_METHOD/7.2.KorQuAD_EDA.ipynb
@@ -278,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noun_extracted_docs = list()\n",
+    "noun_extracted_docs = []\n",
     "for d in sampled_docs:\n",
     "    noun_extracted_docs += phoneme_tokenizer.nouns(d)\n",
     "\n",
@@ -468,7 +468,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noun_extracted_qs = list()\n",
+    "noun_extracted_qs = []\n",
     "for q in sampled_questions:\n",
     "    noun_extracted_qs += phoneme_tokenizer.nouns(q)\n",
     "\n",
