--- a/7.PRETRAIN_METHOD/7.4.1.gpt2_finetune_novel_LM.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.1.gpt2_finetune_novel_LM.ipynb
@@ -149,8 +149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_data = list()\n",
-    "output_data = list()\n",
+    "input_data = []\n",
+    "output_data = []\n",
     "\n",
     "for s in sents:\n",
     "    tokens = [vocab[vocab.bos_token],]  + vocab[tokenizer(s)] + [vocab[vocab.eos_token],]\n",
@@ -269,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
