--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorNLI.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_KorNLI.ipynb
@@ -135,7 +135,7 @@
     "    sent_clean = re.sub(\"[^가-힣ㄱ-ㅎㅏ-ㅣ\\\\s]\", \" \", sent)\n",
     "    return sent_clean\n",
     "\n",
-    "train_data_sents = list()\n",
+    "train_data_sents = []\n",
     "\n",
     "for train_sent_1, train_sent_2 in train_data_snli_xnli[['sentence1', 'sentence2']].values:\n",
     "    train_tokenized_sent_1 = vocab[tokenizer(clean_text(train_sent_1))]\n",
@@ -166,7 +166,7 @@
    "source": [
     "# dev_data_xnli = dev_data_xnli[:50] # for test\n",
     "\n",
-    "dev_data_sents = list()\n",
+    "dev_data_sents = []\n",
     "\n",
     "for dev_sent_1, dev_sent_2 in dev_data_xnli[['sentence1', 'sentence2']].values:\n",
     "    dev_tokenized_sent_1 = vocab[tokenizer(clean_text(dev_sent_1))]\n",
@@ -345,7 +345,7 @@
    "source": [
     "# test_data_xnli = test_data_xnli[:50] # for test\n",
     "\n",
-    "test_data_sents = list()\n",
+    "test_data_sents = []\n",
     "\n",
     "for test_sent_1, test_sent_2 in test_data_xnli[['sentence1', 'sentence2']].values:\n",
     "    test_tokenized_sent_1 = vocab[tokenizer(clean_text(test_sent_1))]\n",
