--- a/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_naver_movie.ipynb
+++ b/7.PRETRAIN_METHOD/7.4.2.gpt2_finetune-KOR_naver_movie.ipynb
@@ -139,8 +139,8 @@
    "source": [
     "# train_data = train_data[:50] # for test\n",
     "\n",
-    "train_data_sents = list()\n",
-    "train_data_labels = list()\n",
+    "train_data_sents = []\n",
+    "train_data_labels = []\n",
     "\n",
     "for train_sent, train_label in train_data[['document', 'label']].values:\n",
     "    train_tokenized_text = vocab[tokenizer(clean_text(train_sent))]\n",
@@ -288,8 +288,8 @@
    "source": [
     "# test_data = test_data[:50] # for test\n",
     "\n",
-    "test_data_sents = list()\n",
-    "test_data_labels = list()\n",
+    "test_data_sents = []\n",
+    "test_data_labels = []\n",
     "\n",
     "for test_sent, test_label in test_data[['document','label']].values:\n",
     "    test_tokenized_text = vocab[tokenizer(clean_text(test_sent))]\n",
